Update: architecture.md
build - Prepare for 3.15.0 (#1523)

refactor - Merge Task Server & Build Server (#1512)

fix - Catch the error when running gradle tests (#1524)

Update: doc